--- a/style.css
+++ b/style.css
@@ -69,4 +69,14 @@ body {
     font-size: 20px;
     transition: all .3s ease-in-out;
   }
+  /* Media Queries: Tablet Landscape */
+@media screen and (max-width: 1060px) {
+  #primary { width:67%; }
+  #secondary { width:30%; margin-left:3%;}
+}
+/* Media Queries: Tabled Portrait */
+@media screen and (max-width: 768px) {
+  #primary { width:100%; }
+  #secondary { width:100%; margin:0; border:none; }
+}
   
